test/compile_errors/err_no_prelude_println.w
//! args: --prelude=none
//! expect-check-fail: undefined variable
fn main:
    println("hello")
